# design-converter

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Pencil dev and Paper Design MCPs history.md  README.md  SOUL.md  paper_to_figma.py  pyproject.toml
cli/commands/: figma-workflow.md
dashboards/: figma-tools.html
dashboards/app/: IMPROVEMENTS.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
design_converter/: __init__.py
design_converter/adapters/: __init__.py  base.py
design_converter/ir/: __init__.py
design_converter/utils/: __init__.py  color.py  css.py  jsx_parser.py  tokens.py
designs/paper/: CHANGELOG.md  PAPER_DESIGN_LEARNINGS.md  WALLET_V2_WORKFLOW_MAP.md
docs/: ARCHITECTURE.md  CONTEXTPLUS_INTEGRATION.md  README.md
docs/archive/: ANALYSIS_REPORT.md  UNIVERSAL_PLUG.md  UNIVERSAL_PLUG_PLAN.md  UNNODE_DEEP_DIVE.md
docs/knowledge/: AGENTS.md  FIGMA-MCPS.md  FIGMA-PLUGIN-API.md  FIGMA-VARIABLES.md  TEXT-COMPONENTS.md
examples/: MyFrame.js
mcps/: add-to-opencode.sh  mcp-config.json  setup.sh
mcps/official/: README.md
output/: push_all.py
plugins/ai-designer/: .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  README.md  (+8 more)
ptf/: README.md  __init__.py  codegen.py  mcp_client.py  parsers.py  tree.py
tests/: __init__.py  conftest.py  test_bridge_server.py  test_e2e.py  test_figma_reader.py  test_figma_writer.py  test_ir_nodes.py  test_paper_client.py  test_paper_reader.py  test_tokens.py
tools/: execute_design.py
(+121 files in other folders)
